<resources>
    <string name="app_name">Translate to Emoji</string>
    <string name="your_original_text">Text to translate</string>
    <string name="copy_emoji_message">Copy</string>
    <string name="replace_original_message">Change</string>
    <string name="edit_dictionary">Dictionary</string>
    <string name="translate">Translate</string>
    <string name="no_message_to_translate">No message to translate.</string>
    <string name="processing_text">Translating message</string>
    <string name="please_wait">Please wait</string>
    <string name="clipboard_text">Translation of %s to emoji</string>
    <string name="copied_to_clipboard">`%s` copied to clipboard.</string>
    <string name="replace_in_place">Replaced original text with `%s`.</string>
    <string name="sample_text">Sample text goes here</string>
    <string name="metadata_content">%1$d/%2$d</string>
    <string name="edit_phrases">Edit Phrases</string>
    <string name="done">Done</string>
    <string name="add">Add</string>
    <string name="delete_entry">Delete Entry</string>
    <string name="edit_emoji">Edit Emoji</string>
    <string name="are_you_sure_you_wish_to_delete">Are you sure you wish to delete this entry? Once you save the dictionary, this will be irreversible.</string>
    <string name="delete">Delete</string>
    <string name="never_mind">Never mind</string>
    <string name="failed_to_load_dict">Failed to load your preferred emoji dictionary! Is external storage available? Dictionary reset to defautl.</string>
    <string name="cant_read_external_storage">Can\'t read external storage. Using default dictionary!</string>
    <string name="invalid_package">Invalid package! This program will fail.</string>
    <string name="your_default_dictionary_invalid">Your default dictionary is invalid.</string>
    <string name="save">Save</string>
    <string name="search_emoji">Search Emoji</string>
    <string name="cancel">Cancel</string>
    <string name="you_must_enter">You must enter a value.</string>
    <string name="save_dictionary">Save Dictionary</string>
    <string name="enter_a_filename_without_ext">Enter a filename without extension (e.g. \"my_cool_dictionary\").</string>
    <string name="saved">Saved.</string>
    <string name="failed_to_save">Failed to save dictionary!</string>
    <string name="failed_to_update">Failed to update dictionary!</string>
    <string name="updated_dictionary">Your dictionary has been updated.</string>
    <string name="add_phrases">Add phrases</string>
    <string name="separate_with_commas">Separate with commas.</string>
    <string name="next">Next</string>
    <string name="add_emoji">Add emoji</string>
	<string name="enter_enter_separated_by">Enter emoji separate by commas.</string>
    <string name="enter_phrases_separated_by">Enter phrases separate by commas.</string>
    <string name="must_one_emoji">You must include at least one emoji.</string>
    <string name="must_enter_one_phrase">You must enter at least one phrase.</string>
	<string name="load_dictionary">Load dictionary</string>
	<string name="help">Help</string>
	<string name="dictionary_load_expl">Place your custom dictionaries in the EmojiTranslateDictionaries on your phone\'s storage.</string>
	<string name="dictionary_loaded">Your dictionary has been loaded.</string>
	<string name="unable_to_load">Unable to load dictionary!</string>
    <string name="no_phrase">No phrase</string>
    <string name="no_emojis">No emojis</string>
    <string name="search_for_phrases">Enter a phrase to find emoji</string>
    <string name="add_another">Add</string>
    <string name="manage_emoji">Manage emoji</string>
    <string name="enter_entry">Add</string>
    <string name="nothing_yet">Nothing yet</string>
    <string name="start_with_a_phrase">Start with a phrase</string>
    <string name="you_must_have_a_phrase">You must include a phrase.</string>
    <string name="cancelled">Cancelled.</string>
    <string name="now_add_some_emoji">Now add some emoji</string>
    <string name="entry_added">Entry added.</string>
    <string name="you_already_have_an_entry">There\'s already an entry for \'%s\'.</string>
    <string name="phrase_used_here">Oops! The phrase `%s` is already used here.</string>
    <string name="dictionary_info">Dictionary info</string>
    <string name="dict_info_block">Filename: %1$s\nAuthor: %2$s\nLanguage: %3$s</string>
    <string name="already_have_one">This entry already appears above.</string>
    <string name="new_dictionary">New dictionary</string>
    <string name="this_phrase_already_associated_with">This phrase is already associated with the emoji `%s`.</string>
    <string name="edit_tags">Edit Tags</string>
    <string name="share_dictionary">Share dictionary</string>
    <string name="save_before_share_message">You\'ll have to save your dictionary first.</string>
    <string name="look_at_cool_dict">Check out %s\'s emoji dictionary!</string>
    <string name="download_to_view">Copy the attached file to the `%s` directory on your device to load it into TranslateToEmoji, or download it from the Play Store at TODO_ADD_URL.</string>
    <string name="no_sharing_activities">No apps for sharing found on your phone : (</string>
    <string name="dictionary_name">Dictionary Title</string>
    <string name="dictionary_author">Author</string>
    <string name="dictionary_language">Source Langauge</string>
    <string name="emojify">Emoji</string>
    <string name="base_off_current">Base off current dictionary</string>
    <string name="create_dictionary">Create Dictionary</string>
    <string name="create">Create</string>
    <string name="provide_all_info">Please provide all info.</string>
    <string name="dictionary_filename">Filename (e.g. \"nifty_phrases\", \"cool_beans\")</string>
    <string name="new_dictionary_created">New dictionary created and opened.</string>
    <string name="failed_to_create">Failed to create new dictionary. Maybe the filename was in use?</string>
</resources>
