<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
				android:layout_width="match_parent"
				android:layout_height="wrap_content"
				android:background="?android:attr/selectableItemBackground"
				android:padding="8dp">

	<LinearLayout
		android:id="@+id/add_view"
		android:orientation="horizontal"
		android:layout_width="match_parent"
		android:layout_height="wrap_content">

		<EditText
			android:layout_weight="1"
			android:layout_gravity="center_vertical"
			android:id="@+id/content_entry"
			android:maxLines="1"
			android:ellipsize="end"
			android:inputType="text"
			android:hint="@string/nothing_yet"
			android:imeActionId="@+id/input_entry"
			android:imeActionLabel="@string/enter_entry"
			android:layout_width="match_parent"
			android:layout_height="wrap_content" >

			<requestFocus />
		</EditText>

		<Button
			android:layout_weight="2"
			android:layout_gravity="center_vertical"
			android:id="@+id/add_content_entry"
			android:layout_width="match_parent"
			android:text="@string/add"
			android:layout_height="wrap_content"/>
	</LinearLayout>
</RelativeLayout>